@startuml diagrama_classe_final
!theme plain
title Diagrama de Classes - Implementação Validada

enum UserType {
  customer
  delivery
  admin
}
enum OrderStatus {
  pending
  preparing
  ready
  delivering
  delivered
}
class User {
  +ID: uint
  +Name: string
  +Email: string
  +Password: string
  +Type: UserType
  +Vehicle: *string
}
class Product {
  +ID: uint
  +Name: string
  +Description: string
  +Price: float64
  +ImageURL: string
}
class Order {
  +ID: uint
  +CustomerID: uint
  +DeliveryID: *uint
  +Status: OrderStatus
  +Total: float64
  +Address: string
}
class OrderItem {
  +ID: uint
  +OrderID: uint
  +ProductID: uint
  +Quantity: int
  +Price: float64
}
class Notification {
  +ID: uint
  +UserID: uint
  +OrderID: *uint
  +Type: string
  +Title: string
  +Message: string
  +IsRead: bool
}
class AuthHandler {
  +Register(context)
  +Login(context)
}
class ProductHandler {
  +List(context)
  +Get(context)
  +Create(context)
  +Update(context)
  +Delete(context)
}
class OrderHandler {
  +Create(context)
  +List(context)
  +UpdateStatus(context)
}
class NotificationHandler {
  +GetNotifications(context)
  +GetUnreadCount(context)
  +MarkAsRead(context)
  +MarkAllAsRead(context)
}
class NotificationService {
  +CreateNotification(data)
  +GetUserNotifications(userID, limit)
  +NotifyOrderStatusChange(order, status)
}
class AuthMiddleware {
  +AuthMiddleware(jwtSecret)
}
class TypeMiddleware {
  +TypeMiddleware(requiredType)
}
User "1" -- "0..*" Order : customer
User "0..1" -- "0..*" Order : delivery
Order "1" -- "1..*" OrderItem
Product "1" -- "0..*" OrderItem
User "1" -- "0..*" Notification
Order "0..1" -- "0..*" Notification
OrderHandler --> NotificationService
NotificationHandler --> NotificationService
AuthHandler --> User
ProductHandler --> Product
AuthMiddleware --> User
TypeMiddleware --> User
note bottom of Order
Fluxo validado: pending -> preparing -> ready -> delivering -> delivered.
end note
@enduml
